[package]
name = "booknook"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.29"
pulldown-cmark = "0.12"
anyhow = "1.0"
unicode-width = "0.2"
dirs = "5"
ureq = "2"
sha2 = "0.10"
epub = "2"
quick-xml = "0.37"
